update demo URL

--- a/README.html
+++ b/README.html
@@ -1,5 +1,5 @@
 <h1 id="collections">collections</h1>
-<p>Demo : <a href="http://daniel-rico.com/collections">http://daniel-rico.com/collections</a></p>
+<p>Demo : <a href="http://collections.daniel-rico.com">http://collections.daniel-rico.com</a></p>
 <p>Collections is a wordpress theme working only with the Express Curate plugin : <a href="http://www.expresscurate.com">http://www.expresscurate.com</a></p>
 <p>It&#39;s a mashup between visual bookmark site and a curated blog a la scoop.it</p>
 <p>It will not work out of the box for everybody as some elements are strictly working for my own design, but feel free to fork it for your own needs.</p>
